# HW-MF3

./: CMakeLists.txt  equilateral.cpp  equilateral.h  figure.cpp  figure.h  isosceles.cpp  isosceles.h  main.cpp  parallelogram.cpp  parallelogram.h  quadrangle.cpp  quadrangle.h  rectangle.cpp  rectangle.h  right.cpp  right.h  romb.cpp  romb.h  square.cpp  square.h  triangle.cpp  triangle.h
