cmake_minimum_required(VERSION 3.0.0)
project(Zad3 VERSION 0.1.0)
add_executable(Zad3 main.cpp equilateral.cpp equilateral.h figure.cpp figure.h isosceles.cpp isosceles.h parallelogram.cpp parallelogram.h 
quadrangle.cpp quadrangle.h rectangle.cpp rectangle.h right.cpp right.h romb.cpp romb.h square.cpp square.h triangle.cpp triangle.h)
